@@ -1,6 +1,6 @@
 DIST xfce4-panel-4.4.3.tar.bz2 777979 RMD160 39c05602e82d3bdeaa152b3820e2f084df6c3759 SHA1 6af98ffef4906220c5ffdda17a77409adc7ed353 SHA256 07a1860f92aaf6b31bfb5e5255f2a09738d12204faa96eca8a2b12d45b8e1bb7
 DIST xfce4-panel-4.6.1.tar.bz2 868225 RMD160 47ce1703306e7427d300bb3675e2e8dcd13c459e SHA1 613c66f6402feba7983a7effb008f091182350d2 SHA256 b308ddc96fcb27b3f18ed2fa20aeb3a12fb73cec7676d75914a58d1b27124b83
-EBUILD xfce4-panel-4.4.3.ebuild 854 RMD160 45800ce68bdfbfe029db302b500709ab1056c81f SHA1 690a10831373f07f405f9814d81cca7049aeef67 SHA256 7836b71737fa108b8d5750e18f7e1f2dbff6c1b76c70adb613c26af59cba53f6
-EBUILD xfce4-panel-4.6.1.ebuild 923 RMD160 0388fac8127d70d3d96053d2c384e77fa134ab37 SHA1 e03c9335613a0a162b2e3379d5178874d4bb74a0 SHA256 6188ca7f0e5ab67130246cc0d02338d6ca5360625c384bcd7659a1ee7f896de6
-MISC ChangeLog 17018 RMD160 b4ee2f007ccd25cd0113620cd5702bcaf1ec3da7 SHA1 c876a62cf64fda8266687dfdffe616f5f9e1d950 SHA256 b50ec23a68587cb02ca1c8715ab32aead936a99cd736a191f4e4a5485cc54129
+EBUILD xfce4-panel-4.4.3.ebuild 880 RMD160 aad6f3b90c84a7a7eb7c67c10be72e7e5276f2ed SHA1 08a370cb1a9eb96d2c222a246f81b533283dfcae SHA256 c7b66db9dadbfaf0e39527a74ce1f4fd9f34f8da1bc75798f4dba3f092cd82e6
+EBUILD xfce4-panel-4.6.1.ebuild 944 RMD160 850f762da7d34f35c614e78d44e3cf7d014402b7 SHA1 00d607f771e47c7d41d47593baa42c9fcbda20ce SHA256 17b614ce68cf3999de0f359e6d8f8c7ca0a275a20de36a41290532b268942b39
+MISC ChangeLog 17154 RMD160 fe1bff6f674daac348bc1a08219243821915bfc1 SHA1 a4270c8d44c033508e2680530ec014440c4f03cb SHA256 311e7d4344b20461b975d5491c753842e62f25af87e4002a42c7f00d40160694
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
