@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/xfce4-panel-4.6.1.ebuild,v 1.1 2009/04/21 04:25:58 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/xfce4-panel-4.6.1.ebuild,v 1.2 2009/05/21 20:09:01 angelos Exp $
 
 EAPI="1"
 
@@ -11,7 +11,7 @@ xfce4_core
 DESCRIPTION="Panel"
 HOMEPAGE="http://www.xfce.org/projects/xfce4-panel/"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
-
+LICENSE="GPL-2 LGPL-2"
 IUSE="debug doc startup-notification"
 
 RDEPEND=">=dev-libs/glib-2.8:2
