@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-panel
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.135 2009/04/21 04:25:58 darkside Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.136 2009/05/21 20:09:01 angelos Exp $
+
+  21 May 2009; Christoph Mende <angelos@gentoo.org>
+  xfce4-panel-4.4.3.ebuild, xfce4-panel-4.6.1.ebuild:
+  Fixed license (bug #268796)
 
 *xfce4-panel-4.6.1 (21 Apr 2009)
 
